--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<script src="./js/main.js"></script>
 		<!-- 引入生成二维码的JS-->
 		<script src="./js/footer.js"></script>
+		<!-- 引入自适应大小标题JS-->
+		<script src="./js/title.js"></script>
 		<!-- 引入JS页脚-->
 		<!-- <script src="./js/offsetWidthDisplay.js"></script>-->
 		<!-- 引入用于显示container.offsetWidth值的JS文件(仅在开发环境使用)-->
